# MAI_OS_Labs

./: .gitignore  README.md
lab1/: README.md
lab1/doc/: 214_Tatulyan_Lab1.docx
lab1/src/: client  client.c  f1.txt  f2.txt  server  server.c
lab2/: CMakeLists.txt
lab2/include/: geometry.h  metrics.h
lab2/src/: geometry.c  main.c  metrics.c
lab3/: CMakeLists.txt
lab3/docs/: 214_Tatulyan_lab3.docx
lab3/include/: config.h
lab3/src/: client.c  server.c
lab3/tests/: strace_out.txt
lab4/: README.md
lab4/docs/: 214_Tatulyan_lab4.docx
lab4/src/: lib1_impl.c  lib2_impl.c  program1  program1.c  program2  program2.c
